--- a/Nouveaudossier/Pretraitement/PreprocessingModelling.ipynb
+++ b/Nouveaudossier/Pretraitement/PreprocessingModelling.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee965777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install numpy pandas scikit-learn matplotlib seaborn tqdm pydicom opencv-python pathlib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "755e8490",
    "metadata": {},
    "outputs": [
@@ -10,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n",
-      "PyTorch version: 2.9.1+cpu\n"
+      "Device: cuda\n",
+      "PyTorch version: 2.7.1+cu118\n"
      ]
     }
    ],
@@ -1060,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2d6dcfd9",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1081,44 @@
       "\n",
       "======================================================================\n",
       "ÉTAPE 3: ENTRAÎNEMENT MODÈLES - PRIORITÉ A\n",
-      "======================================================================\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"ÉTAPE 3: ENTRAÎNEMENT MODÈLES - PRIORITÉ A\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "REDUCED_BATCH_SIZE = 8\n",
+    "\n",
+    "train_loader_reduced = torch.utils.data.DataLoader(\n",
+    "    train_dataset,\n",
+    "    batch_size=REDUCED_BATCH_SIZE,\n",
+    "    shuffle=True,\n",
+    "    num_workers=0,\n",
+    "    pin_memory=True\n",
+    ")\n",
+    "\n",
+    "val_loader_reduced = torch.utils.data.DataLoader(\n",
+    "    val_dataset,\n",
+    "    batch_size=REDUCED_BATCH_SIZE,\n",
+    "    shuffle=False,\n",
+    "    num_workers=0,\n",
+    "    pin_memory=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5c42570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "============================================================\n",
       "ENTRAÎNEMENT: RESNET50\n",
@@ -1086,77 +1133,96 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train:  18%|█▊        | 75/419 [17:19<1:15:14, 13.12s/it]"
+      "Train: 100%|██████████| 419/419 [53:07<00:00,  7.61s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss: 0.7851\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Val: 100%|██████████| 90/90 [09:30<00:00,  6.34s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val Loss: 60.0647\n",
+      "Mean AP: 0.2536 | Accuracy: 0.6820\n",
+      "F1 (weighted): 0.5531 | Kappa: 0.0000\n",
+      "AP per class: ['0.682', '0.000', '0.000', '0.332']\n",
+      "✓ Meilleur AP trouvé! Sauvegardé.\n",
+      "\n",
+      "============================================================\n",
+      "Epoch 2/10 - Model: resnet50\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:   9%|▉         | 37/419 [03:55<40:05,  6.30s/it]"
      ]
     }
    ],
    "source": [
-    "# ÉTAPE 3: ENTRAÎNEMENT MODÈLES PRIORITÉ A\n",
-    "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"ÉTAPE 3: ENTRAÎNEMENT MODÈLES - PRIORITÉ A\")\n",
-    "print(\"=\"*70)\n",
+    "models_priority_a = [\n",
+    "    'resnet50',\n",
+    "    'inception_v3',\n",
+    "    'densenet121',\n",
+    "    'efficientnet_b0'\n",
+    "]\n",
     "\n",
-    "# Réduis batch size pour économiser mémoire\n",
-    "REDUCED_BATCH_SIZE = 8\n",
-    "train_loader_reduced = torch.utils.data.DataLoader(\n",
-    "    train_dataset, \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    shuffle=True, \n",
-    "    pin_memory=True,\n",
-    "    num_workers=0,\n",
-    "    prefetch_factor=None\n",
-    ")\n",
-    "val_loader_reduced = torch.utils.data.DataLoader(\n",
-    "    val_dataset, \n",
-    "    batch_size=BATCH_SIZE, \n",
-    "    shuffle=False, \n",
-    "    num_workers=0,\n",
-    "    pin_memory=True,\n",
-    "    prefetch_factor=None\n",
-    ")\n",
-    "\n",
-    "# Models à entraîner (Priorité A)\n",
-    "models_priority_a = ['resnet50', 'inception_v3', 'densenet121', 'efficientnet_b0']\n",
     "results_priority_a = {}\n",
     "\n",
     "for model_name in models_priority_a:\n",
     "    print(f\"\\n{'='*60}\")\n",
     "    print(f\"ENTRAÎNEMENT: {model_name.upper()}\")\n",
     "    print(f\"{'='*60}\")\n",
-    "    \n",
+    "\n",
     "    try:\n",
-    "        # Crée modèle\n",
-    "        model = create_model(model_name, pretrained=True)\n",
-    "        \n",
-    "        # Trainer\n",
+    "        # 🔥 Nettoyage GPU AVANT chaque modèle\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "        # Crée le modèle\n",
+    "        model = create_model(model_name, pretrained=True).to(DEVICE)\n",
+    "\n",
+    "        # Initialise le trainer\n",
     "        trainer = Trainer(\n",
-    "            \n",
     "            model=model,\n",
     "            train_loader=train_loader_reduced,\n",
     "            val_loader=val_loader_reduced,\n",
     "            model_name=model_name,\n",
-    "            lr=0.001,\n",
+    "            lr=1e-3,\n",
     "            weight_decay=1e-4,\n",
-    "            use_focal=False,  # Mettre True si classe très imbalancée\n",
+    "            use_focal=False,\n",
     "            class_weights=class_weights\n",
     "        )\n",
-    "        \n",
-    "        # Entraîne\n",
-    "        metrics, probs, labels, preds = trainer.train(num_epochs=10, early_stopping_patience=5)\n",
-    "        \n",
-    "        # Sauvegarde résultats\n",
-    "        results_priority_a[model_name] = {\n",
-    "            'trainer': trainer,\n",
-    "            'metrics': metrics,\n",
-    "            'probs': probs,\n",
-    "            'labels': labels,\n",
-    "            'preds': preds\n",
-    "        }\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        print(f\"✗ Erreur entraînement {model_name}: {e}\")\n",
     "\n",
-    "print(f\"\\n✓ Entraînement Priorité A terminé ({len(results_priority_a)}/{len(models_priority_a)} modèles)\")"
+    "        # Entraînement\n",
+    "        metrics, probs, labels, preds = trainer.train(\n",
+    "            num_epochs=10,\n",
+    "            early_stopping_patience=5\n",
+    "        )\n",
+    "\n",
+    "        # Sauvegarde RAM + disque (pro)\n",
+    "        results_priority_a[model_name] = metrics\n",
+    "        torch.save(model.state_dict(), f\"{model_name}_best.pth\")\n",
+    "\n",
+    "    except RuntimeError as e:\n",
+    "        print(f\"❌ RuntimeError ({model_name}): {e}\")\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Erreur ({model_name}): {e}\")\n"
    ]
   },
   {
